@@ -1,8 +1,11 @@
 ==
 
 * Open element with 'Space', also in editor.
+
 * Yank raw or decoded message or element to primary clipboard with 'Y'
   or 'y', useful for applying patches.
+
+* Cancel sending with Ctrl + C.
 
 * Yank the Message-ID to the primary clipboard with C-y.
 
